gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/goto2.d
version https://git-lfs.github.com/spec/v1
oid sha256:1a7ef018e44c23218030c4f01227ef508b89d5506018ec76d0b47520dda2cf96
size 2433
